@@ -441,6 +441,8 @@ Release 2.8.0 - UNRELEASED
     YARN-3604. Fixed ZKRMStateStore#removeApplication to also disable watch.
     (zhihai xu via jianhe)
 
+    YARN-3473. Fix RM Web UI configuration for some properties (rchiang via rkanter)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
